K8/test_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: nodeserver
  name: nodeserver
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nodeserver
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: nodeserver
    spec:
      containers:
      - image: node-server
        name: node-server
        imagePullPolicy: Never
        resources: {}
        ports:
          - containerPort: 8080
status: {}
