K8/test_pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: node-server-pod
spec:
  containers:
    - image: node-server
      name: node-server
      imagePullPolicy: Never
      resources: {}
      ports:
        - containerPort: 8080
