K8/apitest_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: apitest
  labels:
    run: apitest
spec:
  ports:
  - port: 7000
    protocol: TCP
  selector:
    app: apitest
  type: NodePort
