K8/node_ingress_test.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: node-ingress
    namespace: default
    annotations:
        nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
    rules:
    - host: nodeingresstest.dk
      http:
        paths: 
        - path: /
          pathType: Prefix
          backend:
            service: 
                name: nodeserver
                port: 
                    number: 8080
